Lec 31: Load EuroSAT dataset

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from helpers.helper_utils import set_all_seeds"
+    "# Import helper functions\n",
+    "from helpers.helper_utils import set_all_seeds\n",
+    "from helpers.helper_data import get_dataloaders_eurosat"
    ]
   },
   {
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +84,29 @@
    "metadata": {},
    "source": [
     "## EuroSAT Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = get_dataloaders_eurosat(BATCH_SIZE, num_workers=8)\n",
+    "\n",
+    "# Verify dataset\n",
+    "print('Train Dataset:')\n",
+    "for images, labels in train_loader:\n",
+    "    print(f'Image batch dimensions: {images.size()}')\n",
+    "    print(f'Image label dimensions: {labels.size()}')\n",
+    "    break"
    ]
   },
   {
