Lec 31: Print device

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
    "source": [
     "# Hyperparameters\n",
     "LEARNING_RATE = 0.0005\n",
@@ -67,7 +75,9 @@
     "\n",
     "# Other settings\n",
     "DEVICE = torch.device(f'cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "RANDOM_SEED = 123"
+    "RANDOM_SEED = 123\n",
+    "\n",
+    "print('Device: {DEVICE}')"
    ]
   },
   {
