--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -77,7 +77,7 @@
     "DEVICE = torch.device(f'cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "RANDOM_SEED = 123\n",
     "\n",
-    "print('Device: {DEVICE}')"
+    "print(f'Device: {DEVICE}')"
    ]
   },
   {
