Lec 31: Build model

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -28,23 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# PyTorch imports\n",
-    "import torch"
+    "import torch\n",
+    "import torch.nn as nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import helper functions\n",
+    "# Import helper files\n",
     "from helpers.helper_utils import set_all_seeds\n",
-    "from helpers.helper_data import get_dataloaders_eurosat"
+    "from helpers.helper_data import get_dataloaders_eurosat\n",
+    "from helpers.helper_models import Reshape, Trim"
    ]
   },
   {
@@ -56,17 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Hyperparameters\n",
     "LEARNING_RATE = 0.0005\n",
@@ -97,13 +91,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data Loader"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -123,7 +110,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model"
+    "## Convolutional Variational Autoencoder Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CVAE(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            # 3 channels x 64x64 pixel images\n",
+    "\n",
+    "            # Output: 32 channels x 32x32 pixel images\n",
+    "            nn.Conv2d(3, 32, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "            \n",
+    "            # Output: 64 channels x 16x16 pixel images\n",
+    "            nn.Conv2d(32, 64, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "\n",
+    "            # Output: 128 channels x 8x8 pixel images\n",
+    "            nn.Conv2d(64, 128, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "\n",
+    "            # Output: 256 channels x 4x4 pixel images\n",
+    "            nn.Conv2d(128, 256, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(256),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "\n",
+    "            # Output: 512 channels x 2x2 pixel images\n",
+    "            nn.Conv2d(256, 512, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(512),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "\n",
+    "            # Output: 512x2x2 = 2048 features\n",
+    "            nn.Flatten()\n",
+    "        )\n",
+    "\n",
+    "        # Fully connected layer: 2048 -> 512\n",
+    "        self.z_mean = nn.Linear(2048, 512)\n",
+    "\n",
+    "        # Fully connected layer: 2048 -> 512\n",
+    "        self.z_log_var = nn.Linear(2048, 512)\n",
+    "\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            # Fully connected layer: 512 -> 2048\n",
+    "            nn.Linear(512, 2048),\n",
+    "\n",
+    "            # Reshape to 512x2x2 (how it was in encoder before flattening)\n",
+    "            # See helper class above\n",
+    "            Reshape(-1, 512, 2, 2),\n",
+    "\n",
+    "            # Output: 256 channels x 5x5 pixel images\n",
+    "            nn.ConvTranspose2d(512, 256, stride=2, kernel_size=3),\n",
+    "            nn.BatchNorm2d(256),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "\n",
+    "            # Output: 128 channels, 9x9 pixel images\n",
+    "            nn.ConvTranspose2d(256, 128, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "\n",
+    "            # Output: 64 channels, 17x17 pixel images\n",
+    "            nn.ConvTranspose2d(128, 64, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "\n",
+    "            # Output: 32 channels, 33x33 pixel images\n",
+    "            nn.ConvTranspose2d(64, 32, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.LeakyReLU(0.1, inplace=True),\n",
+    "\n",
+    "            # Output: 3 channels, 65x65 pixel images\n",
+    "            nn.ConvTranspose2d(32, 3, stride=2, kernel_size=3, padding=1),\n",
+    "\n",
+    "            # Trim images from 65x65 to 64x64\n",
+    "            # See helper class above\n",
+    "            Trim(64),\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "    \n",
+    "    def encoding_fn(self, x):\n",
+    "        x = self.encoder(x)\n",
+    "\n",
+    "        z_mean = self.z_mean(x)\n",
+    "        z_log_var = self.z_log_var(x)\n",
+    "\n",
+    "        encoded = self.reparameterize(z_mean, z_log_var)\n",
+    "\n",
+    "        return encoded\n",
+    "\n",
+    "    def reparameterize(self, z_mean, z_log_var):\n",
+    "        eps = torch.randn(z_mean.size(0), z_mean.size(1)).to(DEVICE)\n",
+    "        z = z_mean + eps * torch.exp(z_log_var / 2.)\n",
+    "        return z\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.encoder(x)\n",
+    "\n",
+    "        z_mean = self.z_mean(x)\n",
+    "        z_log_var = self.z_log_var(x)\n",
+    "        encoded = self.reparameterize(z_mean, z_log_var)\n",
+    "\n",
+    "        decoded = self.decoder(encoded)\n",
+    "\n",
+    "        return encoded, z_mean, z_log_var, decoded"
    ]
   },
   {
