Lec 31: Build model

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -114,6 +114,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convolutional layer output size formula:\n",
+    "$$o=\\lfloor\\frac{i+2p-k}{s}\\rfloor+1$$\n",
+    "\n",
+    "Transposed convolutional layer output size formula:\n",
+    "$$o=s(i-1)+k-2p$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -224,6 +235,18 @@
     "        decoded = self.decoder(encoded)\n",
     "\n",
     "        return encoded, z_mean, z_log_var, decoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CVAE()\n",
+    "model.to(DEVICE)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)"
    ]
   },
   {
