Lec 31: Implement train function

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -46,7 +46,8 @@
     "# Import helper files\n",
     "from helpers.helper_utils import set_all_seeds\n",
     "from helpers.helper_data import get_dataloaders_eurosat\n",
-    "from helpers.helper_models import Reshape, Trim"
+    "from helpers.helper_models import Reshape, Trim\n",
+    "from helpers.helper_train import train_cvae"
    ]
   },
   {
@@ -254,6 +255,21 @@
    "metadata": {},
    "source": [
     "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_dict = train_cvae(\n",
+    "    model,\n",
+    "    optimizer,\n",
+    "    num_epochs=NUM_EPOCHS,\n",
+    "    train_loader=train_loader,\n",
+    "    device=DEVICE\n",
+    ")"
    ]
   }
  ],
