--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -140,31 +140,26 @@
     "            # 3 channels x 64x64 pixel images\n",
     "\n",
     "            # Output: 32 channels x 32x32 pixel images\n",
-    "            nn.Conv2d(3, 32, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(3, 32, stride=2, kernel_size=3, bias=False, padding=1),\n",
     "            nn.BatchNorm2d(32),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "            \n",
     "            # Output: 64 channels x 16x16 pixel images\n",
-    "            nn.Conv2d(32, 64, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(32, 64, stride=2, kernel_size=3, bias=False, padding=1),\n",
     "            nn.BatchNorm2d(64),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "\n",
     "            # Output: 128 channels x 8x8 pixel images\n",
-    "            nn.Conv2d(64, 128, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.Conv2d(64, 128, stride=2, kernel_size=3, bias=False, padding=1),\n",
     "            nn.BatchNorm2d(128),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "\n",
-    "            # Output: 256 channels x 4x4 pixel images\n",
-    "            nn.Conv2d(128, 256, stride=2, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(256),\n",
+    "            # Output: 128 channels x 4x4 pixel images\n",
+    "            nn.Conv2d(128, 128, stride=2, kernel_size=3, bias=False, padding=1),\n",
+    "            nn.BatchNorm2d(128),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "\n",
-    "            # Output: 512 channels x 2x2 pixel images\n",
-    "            nn.Conv2d(256, 512, stride=2, kernel_size=3, padding=1),\n",
-    "            nn.BatchNorm2d(512),\n",
-    "            nn.LeakyReLU(0.1, inplace=True),\n",
-    "\n",
-    "            # Output: 512x2x2 = 2048 features\n",
+    "            # Output: 128x4x4 = 2048 features\n",
     "            nn.Flatten()\n",
     "        )\n",
     "\n",
@@ -178,17 +173,11 @@
     "            # Fully connected layer: 512 -> 2048\n",
     "            nn.Linear(512, 2048),\n",
     "\n",
-    "            # Reshape to 512x2x2 (how it was in encoder before flattening)\n",
-    "            # See helper class above\n",
-    "            Reshape(-1, 512, 2, 2),\n",
+    "            # Reshape to 128x4x4 (how it was in encoder before flattening)\n",
+    "            Reshape(-1, 128, 4, 4),\n",
     "\n",
-    "            # Output: 256 channels x 5x5 pixel images\n",
-    "            nn.ConvTranspose2d(512, 256, stride=2, kernel_size=3),\n",
-    "            nn.BatchNorm2d(256),\n",
-    "            nn.LeakyReLU(0.1, inplace=True),\n",
-    "\n",
-    "            # Output: 128 channels, 9x9 pixel images\n",
-    "            nn.ConvTranspose2d(256, 128, stride=2, kernel_size=3, padding=1),\n",
+    "            # Output: 128 channels x 9x9 pixel images\n",
+    "            nn.ConvTranspose2d(128, 128, stride=2, kernel_size=3),\n",
     "            nn.BatchNorm2d(128),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "\n",
@@ -206,7 +195,6 @@
     "            nn.ConvTranspose2d(32, 3, stride=2, kernel_size=3, padding=1),\n",
     "\n",
     "            # Trim images from 65x65 to 64x64\n",
-    "            # See helper class above\n",
     "            Trim(64),\n",
     "            nn.Sigmoid()\n",
     "        )\n",
