Lec 31: Add ability to save model

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -259,6 +259,31 @@
     "    device=DEVICE\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If running on Colab, uncomment this code\n",
+    "\n",
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "\n",
+    "# torch.save(model.state_dict(), 'drive/MyDrive/saved_data/model.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If running on Colab, comment this code\n",
+    "\n",
+    "torch.save(model.state_dict(), '/Users/nxvgalang/Documents/main/college/cs6073/uc-cs6073-deep-learning/lec31/saved_data/model.pt')"
+   ]
   }
  ],
  "metadata": {
