Lec 31: Rearrange save data code

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -32,6 +32,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# PyTorch imports\n",
     "import torch\n",
     "import torch.nn as nn"
@@ -71,7 +80,9 @@
     "# Other settings\n",
     "DEVICE = torch.device(f'cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "RANDOM_SEED = 123\n",
+    "SAVED_DATA_PATH = '/Users/nxvgalang/Documents/main/college/cs6073/uc-cs6073-deep-learning/lec31/saved_data/'\n",
     "\n",
+    "set_all_seeds(RANDOM_SEED)\n",
     "print(f'Device: {DEVICE}')"
    ]
   },
@@ -81,7 +92,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_all_seeds(RANDOM_SEED)"
+    "# If running on Colab, uncomment this code\n",
+    "\n",
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "\n",
+    "# SAVED_DATA_PATH = 'drive/MyDrive/saved_data/'"
    ]
   },
   {
@@ -266,23 +282,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If running on Colab, uncomment this code\n",
-    "\n",
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')\n",
-    "\n",
-    "# torch.save(model.state_dict(), 'drive/MyDrive/saved_data/model.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# If running on Colab, comment this code\n",
-    "\n",
-    "torch.save(model.state_dict(), '/Users/nxvgalang/Documents/main/college/cs6073/uc-cs6073-deep-learning/lec31/saved_data/model.pt')"
+    "torch.save(model.state_dict(), SAVED_DATA_PATH + 'model.pt')\n",
+    "with open(SAVED_DATA_PATH + 'logs.json', 'w') as f:\n",
+    "    json.dump(log_dict, f)"
    ]
   }
  ],
