Lec 31: Improve model

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -156,44 +156,44 @@
     "            # 3 channels x 64x64 pixel images\n",
     "\n",
     "            # Output: 32 channels x 32x32 pixel images\n",
-    "            nn.Conv2d(3, 32, stride=2, kernel_size=3, bias=False, padding=1),\n",
+    "            nn.Conv2d(3, 32, stride=2, kernel_size=3, padding=1),\n",
     "            nn.BatchNorm2d(32),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "            \n",
     "            # Output: 64 channels x 16x16 pixel images\n",
-    "            nn.Conv2d(32, 64, stride=2, kernel_size=3, bias=False, padding=1),\n",
+    "            nn.Conv2d(32, 64, stride=2, kernel_size=3, padding=1),\n",
     "            nn.BatchNorm2d(64),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "\n",
     "            # Output: 128 channels x 8x8 pixel images\n",
-    "            nn.Conv2d(64, 128, stride=2, kernel_size=3, bias=False, padding=1),\n",
+    "            nn.Conv2d(64, 128, stride=2, kernel_size=3, padding=1),\n",
     "            nn.BatchNorm2d(128),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "\n",
-    "            # Output: 128 channels x 4x4 pixel images\n",
-    "            nn.Conv2d(128, 128, stride=2, kernel_size=3, bias=False, padding=1),\n",
-    "            nn.BatchNorm2d(128),\n",
+    "            # Output: 256 channels x 4x4 pixel images\n",
+    "            nn.Conv2d(128, 256, stride=2, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(256),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "\n",
-    "            # Output: 128x4x4 = 2048 features\n",
+    "            # Output: 256x4x4 = 4096 features\n",
     "            nn.Flatten()\n",
     "        )\n",
     "\n",
-    "        # Fully connected layer: 2048 -> 512\n",
-    "        self.z_mean = nn.Linear(2048, 512)\n",
+    "        # Fully connected layer: 4096 -> 512\n",
+    "        self.z_mean = nn.Linear(4096, 512)\n",
     "\n",
-    "        # Fully connected layer: 2048 -> 512\n",
-    "        self.z_log_var = nn.Linear(2048, 512)\n",
+    "        # Fully connected layer: 4096 -> 512\n",
+    "        self.z_log_var = nn.Linear(4096, 512)\n",
     "\n",
     "        self.decoder = nn.Sequential(\n",
-    "            # Fully connected layer: 512 -> 2048\n",
-    "            nn.Linear(512, 2048),\n",
+    "            # Fully connected layer: 512 -> 4096\n",
+    "            nn.Linear(512, 4096),\n",
     "\n",
-    "            # Reshape to 128x4x4 (how it was in encoder before flattening)\n",
-    "            Reshape(-1, 128, 4, 4),\n",
+    "            # Reshape to 256x4x4 (how it was in encoder before flattening)\n",
+    "            Reshape(-1, 256, 4, 4),\n",
     "\n",
     "            # Output: 128 channels x 9x9 pixel images\n",
-    "            nn.ConvTranspose2d(128, 128, stride=2, kernel_size=3),\n",
+    "            nn.ConvTranspose2d(256, 128, stride=2, kernel_size=3),\n",
     "            nn.BatchNorm2d(128),\n",
     "            nn.LeakyReLU(0.1, inplace=True),\n",
     "\n",
