Lec 31: Display training results

--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -56,7 +56,8 @@
     "from helpers.helper_utils import set_all_seeds\n",
     "from helpers.helper_data import get_dataloaders_eurosat\n",
     "from helpers.helper_models import Reshape, Trim\n",
-    "from helpers.helper_train import train_cvae"
+    "from helpers.helper_train import train_cvae\n",
+    "from helpers.helper_plots import plot_generated_images"
    ]
   },
   {
@@ -285,6 +286,38 @@
     "torch.save(model.state_dict(), SAVED_DATA_PATH + 'model.pt')\n",
     "with open(SAVED_DATA_PATH + 'logs.json', 'w') as f:\n",
     "    json.dump(log_dict, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVED_DATA_PATH = '/Users/nxvgalang/Documents/main/college/cs6073/uc-cs6073-deep-learning/lec31/saved_data/'\n",
+    "\n",
+    "model = CVAE()\n",
+    "model.load_state_dict(torch.load(SAVED_DATA_PATH + 'model.pt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_generated_images(\n",
+    "    model,\n",
+    "    data_loader=train_loader,\n",
+    "    device=DEVICE\n",
+    ")"
    ]
   }
  ],
