--- a/lec31/lec31_activity.ipynb
+++ b/lec31/lec31_activity.ipynb
@@ -15,8 +15,8 @@
     "Build a Convolutional VAE for the EuroSAT dataset\n",
     "\n",
     "1. Demonstrate by plotting original and reconstructed images that your model is performing well. You are free to choose your model configuration and any hyperparameters\n",
-    "2. Plot the reconstructed images from the mean of latent representations for 'industrial buildings'  and 'forest' classes\n",
-    "3. Plot the transition from 'industrial buildings' to 'forest' by moving in the latent space from one class to another in 10 steps and generating the full images using the decoder"
+    "2. Plot the reconstructed images from the mean of latent representations for 'Industrial'  and 'Forest' classes\n",
+    "3. Plot the transition from 'Industrial' to 'Forest' by moving in the latent space from one class to another in 10 steps and generating the full images using the decoder"
    ]
   },
   {
@@ -32,7 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "import json\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -54,7 +55,7 @@
    "source": [
     "# Import helper files\n",
     "from helpers.helper_utils import set_all_seeds\n",
-    "from helpers.helper_data import get_dataloaders_eurosat\n",
+    "from helpers.helper_data import get_dataloaders_eurosat, compute_average_class\n",
     "from helpers.helper_models import Reshape, Trim\n",
     "from helpers.helper_train import train_cvae\n",
     "from helpers.helper_plots import plot_generated_images"
@@ -304,7 +305,21 @@
     "SAVED_DATA_PATH = '/Users/nxvgalang/Documents/main/college/cs6073/uc-cs6073-deep-learning/lec31/saved_data/'\n",
     "\n",
     "model = CVAE()\n",
-    "model.load_state_dict(torch.load(SAVED_DATA_PATH + 'model.pt'))"
+    "model.load_state_dict(torch.load(SAVED_DATA_PATH + 'model.pt', map_location=DEVICE), )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Reconstructed Images"
    ]
   },
   {
@@ -316,8 +331,97 @@
     "plot_generated_images(\n",
     "    model,\n",
     "    data_loader=train_loader,\n",
-    "    device=DEVICE\n",
+    "    device=DEVICE,\n",
+    "    \n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Average \"Forest\" Class in Latent Space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_img_with_forest, avg_img_without_forest = compute_average_class(\n",
+    "    class_idx=1,\n",
+    "    image_dim=512,\n",
+    "    data_loader=train_loader,\n",
+    "    device=DEVICE,\n",
+    "    encoding_fn=model.encoding_fn\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    avg_img_with_forest.to(DEVICE)\n",
+    "    avg_img_with_forest = model.decoder(avg_img_with_forest).to(torch.device('cpu')).squeeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(2, 2))\n",
+    "ax.imshow((avg_img_with_forest).permute(1, 2, 0))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Average \"Industrial\" Class in Latent Space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_img_with_industrial, avg_img_without_industrial = compute_average_class(\n",
+    "    class_idx=4,\n",
+    "    image_dim=512,\n",
+    "    data_loader=train_loader,\n",
+    "    device=DEVICE,\n",
+    "    encoding_fn=model.encoding_fn\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    avg_img_with_industrial.to(DEVICE)\n",
+    "    avg_img_with_industrial = model.decoder(avg_img_with_industrial).to(torch.device('cpu')).squeeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(2, 2))\n",
+    "ax.imshow((avg_img_with_industrial).permute(1, 2, 0))\n",
+    "plt.show()"
    ]
   }
  ],
