Lec 32: Build model

--- a/lec32/lec32_activity.ipynb
+++ b/lec32/lec32_activity.ipynb
@@ -42,8 +42,9 @@
    "source": [
     "# Pytorch imports\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "import torchvision\n",
-    "from torchvision import transforms, datasets"
+    "from torchvision import transforms"
    ]
   },
   {
@@ -179,6 +180,91 @@
     "    )\n",
     ")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GAN Model (from lecture)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GAN(nn.Module):\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        latent_dim=100,\n",
+    "        image_height=28,\n",
+    "        image_width=28,\n",
+    "        color_channels=1\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.image_height = image_height\n",
+    "        self.image_width = image_width\n",
+    "        self.color_channels = color_channels\n",
+    "\n",
+    "        self.generator = nn.Sequential(\n",
+    "            nn.Linear(latent_dim, 128),\n",
+    "            nn.LeakyReLU(inplace=True),\n",
+    "            nn.Dropout(p=0.5),\n",
+    "\n",
+    "            nn.Linear(128, image_height * image_width * color_channels),\n",
+    "            nn.Tanh()\n",
+    "        )\n",
+    "\n",
+    "        self.discriminator = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "\n",
+    "            nn.Linear(image_height * image_width * color_channels, 128),\n",
+    "            nn.LeakyReLU(inplace=True),\n",
+    "            nn.Dropout(p=0.5),\n",
+    "            \n",
+    "            nn.Linear(128, 1)\n",
+    "        )\n",
+    "    \n",
+    "    def generator_forward(self, z):\n",
+    "        z = torch.flatten(z, start_dim=1)\n",
+    "        img = self.generator(z)\n",
+    "        img = img.view(\n",
+    "            z.size(0),\n",
+    "            self.color_channels,\n",
+    "            self.image_height,\n",
+    "            self.image_width\n",
+    "        )\n",
+    "        return img\n",
+    "\n",
+    "    def discriminator_forward(self, img):\n",
+    "        logits = model.discriminator(img)\n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = GAN()\n",
+    "model.to(DEVICE)\n",
+    "\n",
+    "generator_optimizer = torch.optim.Adam(\n",
+    "    model.generator.parameters(),\n",
+    "    betas=(0.5, 0.999),\n",
+    "    lr=GENERATOR_LEARNING_RATE\n",
+    ")\n",
+    "\n",
+    "discriminator_optimizer = torch.optim.Adam(\n",
+    "    model.discriminator.parameters(),\n",
+    "    betas=(0.5, 0.999),\n",
+    "    lr=DISCRIMINATOR_LEARNING_RATE\n",
+    ")"
    ]
   }
  ],
