Lec 32: Implement training function

--- a/lec32/lec32_activity.ipynb
+++ b/lec32/lec32_activity.ipynb
@@ -30,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ]
@@ -55,7 +56,8 @@
    "source": [
     "# Import helper files\n",
     "from helpers.helper_utils import set_all_seeds\n",
-    "from helpers.helper_data import get_dataloaders_mnist"
+    "from helpers.helper_data import get_dataloaders_mnist\n",
+    "from helpers.helper_train import train_gan"
    ]
   },
   {
@@ -76,6 +78,7 @@
     "BATCH_SIZE = 128\n",
     "GENERATOR_LEARNING_RATE = 0.0002\n",
     "DISCRIMINATOR_LEARNING_RATE = 0.0002\n",
+    "LATENT_DIM = 100\n",
     "\n",
     "# Other settings\n",
     "DEVICE = torch.device(f'cuda:0' if torch.cuda.is_available() else 'cpu')\n",
@@ -83,6 +86,7 @@
     "IMAGE_HEIGHT = 28\n",
     "IMAGE_WIDTH = 28\n",
     "IMAGE_CHANNELS = 1\n",
+    "SAVED_DATA_PATH = '/Users/nxvgalang/Documents/main/college/cs6073/uc-cs6073-deep-learning/lec32/saved_data/'\n",
     "\n",
     "set_all_seeds(RANDOM_SEED)\n",
     "print(f'Device: {DEVICE}')"
@@ -265,6 +269,41 @@
     "    betas=(0.5, 0.999),\n",
     "    lr=DISCRIMINATOR_LEARNING_RATE\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_dict = train_gan(\n",
+    "    model,\n",
+    "    generator_optimizer,\n",
+    "    discriminator_optimizer,\n",
+    "    num_epochs=NUM_EPOCHS,\n",
+    "    latent_dim=LATENT_DIM,\n",
+    "    train_loader=train_loader,\n",
+    "    device=DEVICE\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), SAVED_DATA_PATH + 'model.pt')\n",
+    "with open(SAVED_DATA_PATH + 'logs.json', 'w') as f:\n",
+    "    json.dump(log_dict, f)"
    ]
   }
  ],
