Lec 32: Train, save, and plot

--- a/lec32/lec32_activity.ipynb
+++ b/lec32/lec32_activity.ipynb
@@ -57,7 +57,9 @@
     "# Import helper files\n",
     "from helpers.helper_utils import set_all_seeds\n",
     "from helpers.helper_data import get_dataloaders_mnist\n",
-    "from helpers.helper_train import train_gan"
+    "from helpers.helper_train import train_gan\n",
+    "from helpers.helper_plots import plot_generated_images\n",
+    "from helpers.helper_models import Reshape"
    ]
   },
   {
@@ -245,7 +247,7 @@
     "        return img\n",
     "\n",
     "    def discriminator_forward(self, img):\n",
-    "        logits = model.discriminator(img)\n",
+    "        logits = self.discriminator(img)\n",
     "        return logits"
    ]
   },
@@ -255,17 +257,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = GAN()\n",
-    "model.to(DEVICE)\n",
+    "model1 = GAN()\n",
+    "model1.to(DEVICE)\n",
     "\n",
-    "generator_optimizer = torch.optim.Adam(\n",
-    "    model.generator.parameters(),\n",
+    "generator_optimizer_1 = torch.optim.Adam(\n",
+    "    model1.generator.parameters(),\n",
     "    betas=(0.5, 0.999),\n",
     "    lr=GENERATOR_LEARNING_RATE\n",
     ")\n",
     "\n",
-    "discriminator_optimizer = torch.optim.Adam(\n",
-    "    model.discriminator.parameters(),\n",
+    "discriminator_optimizer_1 = torch.optim.Adam(\n",
+    "    model1.discriminator.parameters(),\n",
     "    betas=(0.5, 0.999),\n",
     "    lr=DISCRIMINATOR_LEARNING_RATE\n",
     ")"
@@ -284,11 +286,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_dict = train_gan(\n",
-    "    model,\n",
-    "    generator_optimizer,\n",
-    "    discriminator_optimizer,\n",
-    "    num_epochs=NUM_EPOCHS,\n",
+    "log_dict_1 = train_gan(\n",
+    "    model1,\n",
+    "    generator_optimizer_1,\n",
+    "    discriminator_optimizer_1,\n",
+    "    num_epochs=1,\n",
     "    latent_dim=LATENT_DIM,\n",
     "    train_loader=train_loader,\n",
     "    device=DEVICE\n",
@@ -301,9 +303,273 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), SAVED_DATA_PATH + 'model.pt')\n",
-    "with open(SAVED_DATA_PATH + 'logs.json', 'w') as f:\n",
-    "    json.dump(log_dict, f)"
+    "torch.save(model1.state_dict(), SAVED_DATA_PATH + 'model1.pt')\n",
+    "\n",
+    "# Can't save Tensor in JSON file, so convert to list before saving\n",
+    "for i in range(len(log_dict_1['images_from_noise_per_epoch'])):\n",
+    "    log_dict_1['images_from_noise_per_epoch'][i] = log_dict_1['images_from_noise_per_epoch'][i].tolist()\n",
+    "\n",
+    "with open(SAVED_DATA_PATH + 'logs1.json', 'w') as f:\n",
+    "    json.dump(log_dict_1, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Saved Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVED_DATA_PATH = '/Users/nxvgalang/Documents/main/college/cs6073/uc-cs6073-deep-learning/lec32/saved_data/'\n",
+    "\n",
+    "model1 = GAN()\n",
+    "model1.load_state_dict(torch.load(SAVED_DATA_PATH + 'model1.pt', map_location=DEVICE))\n",
+    "\n",
+    "with open(SAVED_DATA_PATH + 'logs1.json', 'r') as f:\n",
+    "    log_dict_1 = json.loads(f.read())\n",
+    "\n",
+    "# Convert image data back to Tensors\n",
+    "for i in range(len(log_dict_1['images_from_noise_per_epoch'])):\n",
+    "    log_dict_1['images_from_noise_per_epoch'][i] = torch.Tensor(log_dict_1['images_from_noise_per_epoch'][i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Generated Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_generated_images(log_dict=log_dict_1, num_epochs=NUM_EPOCHS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model (Deep Convolutional GAN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DCGAN(nn.Module):\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        latent_dim=100,\n",
+    "        image_height=28,\n",
+    "        image_width=28,\n",
+    "        color_channels=1\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.image_height = image_height\n",
+    "        self.image_width = image_width\n",
+    "        self.color_channels = color_channels\n",
+    "\n",
+    "        self.generator = nn.Sequential(\n",
+    "            # Input: 100 features\n",
+    "\n",
+    "            # Output: 784 features\n",
+    "            nn.Linear(latent_dim, 784),\n",
+    "            nn.BatchNorm1d(784),\n",
+    "            nn.LeakyReLU(inplace=True),\n",
+    "\n",
+    "            # Output: 16 channels x 7x7 images\n",
+    "            Reshape(-1, 16, 7, 7),\n",
+    "\n",
+    "            # Output: 32 channels x 14x14 images\n",
+    "            nn.ConvTranspose2d(\n",
+    "                16, 32,\n",
+    "                kernel_size=5, stride=2, padding=2,\n",
+    "                output_padding=1, bias=False\n",
+    "            ),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.LeakyReLU(inplace=True),\n",
+    "\n",
+    "            # Output: 1 channel x 28x28 images\n",
+    "            nn.ConvTranspose2d(\n",
+    "                32, 1,\n",
+    "                kernel_size=5, stride=2, padding=2,\n",
+    "                output_padding=1, bias=False\n",
+    "            ),\n",
+    "            nn.Tanh()\n",
+    "        )\n",
+    "\n",
+    "        self.discriminator = nn.Sequential(\n",
+    "            # Input: 1 channel x 28x28 images\n",
+    "\n",
+    "            # Output: 32 channels x 14x14 images\n",
+    "            nn.Conv2d(\n",
+    "                1, 32,\n",
+    "                kernel_size=5, stride=2, padding=2,\n",
+    "                bias=False\n",
+    "            ),\n",
+    "            nn.LeakyReLU(inplace=True),\n",
+    "\n",
+    "            # Output: 16 channels x 7x7 images\n",
+    "            nn.Conv2d(\n",
+    "                32, 16,\n",
+    "                kernel_size=5, stride=2, padding=2,\n",
+    "                bias=False\n",
+    "            ),\n",
+    "            nn.BatchNorm2d(16),\n",
+    "            nn.LeakyReLU(inplace=True),\n",
+    "\n",
+    "            # Output: 784 features\n",
+    "            nn.Flatten(),\n",
+    "\n",
+    "            # Output: 784 features\n",
+    "            nn.Linear(784, 784),\n",
+    "            nn.BatchNorm1d(784),\n",
+    "            nn.LeakyReLU(inplace=True),\n",
+    "\n",
+    "            # Output: 1 feature\n",
+    "            nn.Linear(784, 1)\n",
+    "        )\n",
+    "    \n",
+    "    def generator_forward(self, z):\n",
+    "        z = torch.flatten(z, start_dim=1)\n",
+    "        img = self.generator(z)\n",
+    "        return img\n",
+    "\n",
+    "    def discriminator_forward(self, img):\n",
+    "        logits = self.discriminator(img)\n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2 = DCGAN()\n",
+    "model2.to(DEVICE)\n",
+    "\n",
+    "generator_optimizer_2 = torch.optim.Adam(\n",
+    "    model2.generator.parameters(),\n",
+    "    betas=(0.5, 0.999),\n",
+    "    lr=GENERATOR_LEARNING_RATE\n",
+    ")\n",
+    "\n",
+    "discriminator_optimizer_2 = torch.optim.Adam(\n",
+    "    model2.discriminator.parameters(),\n",
+    "    betas=(0.5, 0.999),\n",
+    "    lr=DISCRIMINATOR_LEARNING_RATE\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_dict_2 = train_gan(\n",
+    "    model2,\n",
+    "    generator_optimizer_2,\n",
+    "    discriminator_optimizer_2,\n",
+    "    num_epochs=20,\n",
+    "    latent_dim=LATENT_DIM,\n",
+    "    train_loader=train_loader,\n",
+    "    device=DEVICE\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model2.state_dict(), SAVED_DATA_PATH + 'model2.pt')\n",
+    "\n",
+    "# Can't save Tensor in JSON file, so convert to list before saving\n",
+    "for i in range(len(log_dict_2['images_from_noise_per_epoch'])):\n",
+    "    log_dict_2['images_from_noise_per_epoch'][i] = log_dict_2['images_from_noise_per_epoch'][i].tolist()\n",
+    "\n",
+    "with open(SAVED_DATA_PATH + 'logs2.json', 'w') as f:\n",
+    "    json.dump(log_dict_2, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Saved Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVED_DATA_PATH = '/Users/nxvgalang/Documents/main/college/cs6073/uc-cs6073-deep-learning/lec32/saved_data/'\n",
+    "\n",
+    "model2 = DCGAN()\n",
+    "model2.load_state_dict(torch.load(SAVED_DATA_PATH + 'model2.pt', map_location=DEVICE))\n",
+    "\n",
+    "with open(SAVED_DATA_PATH + 'logs2.json', 'r') as f:\n",
+    "    log_dict_2 = json.loads(f.read())\n",
+    "\n",
+    "# Convert image data back to Tensors\n",
+    "for i in range(len(log_dict_2['images_from_noise_per_epoch'])):\n",
+    "    log_dict_2['images_from_noise_per_epoch'][i] = torch.Tensor(log_dict_2['images_from_noise_per_epoch'][i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Generated Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_generated_images(log_dict=log_dict_2, num_epochs=20)"
    ]
   }
  ],
